; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/ctl/extr_ctl.c_ctl_scsi_release.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/ctl/extr_ctl.c_ctl_scsi_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ctl_scsiio = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.ctl_lun = type { i32, i64, i32 }
%union.ctl_io = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"ctl_scsi_release\0A\00", align 1
@CTL_LUN_RESERVED = common dso_local global i32 0, align 4
@CTL_RETVAL_COMPLETE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ctl_scsi_release(%struct.ctl_scsiio* %0) #0 {
  %2 = alloca %struct.ctl_scsiio*, align 8
  %3 = alloca %struct.ctl_lun*, align 8
  %4 = alloca i64, align 8
  store %struct.ctl_scsiio* %0, %struct.ctl_scsiio** %2, align 8
  %5 = load %struct.ctl_scsiio*, %struct.ctl_scsiio** %2, align 8
  %6 = call %struct.ctl_lun* @CTL_LUN(%struct.ctl_scsiio* %5)
  store %struct.ctl_lun* %6, %struct.ctl_lun** %3, align 8
  %7 = call i32 @CTL_DEBUG_PRINT(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.ctl_scsiio*, %struct.ctl_scsiio** %2, align 8
  %9 = getelementptr inbounds %struct.ctl_scsiio, %struct.ctl_scsiio* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = call i64 @ctl_get_initindex(i32* %10)
  store i64 %11, i64* %4, align 8
  %12 = load %struct.ctl_lun*, %struct.ctl_lun** %3, align 8
  %13 = getelementptr inbounds %struct.ctl_lun, %struct.ctl_lun* %12, i32 0, i32 2
  %14 = call i32 @mtx_lock(i32* %13)
  %15 = load %struct.ctl_lun*, %struct.ctl_lun** %3, align 8
  %16 = getelementptr inbounds %struct.ctl_lun, %struct.ctl_lun* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* @CTL_LUN_RESERVED, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %34

21:                                               ; preds = %1
  %22 = load %struct.ctl_lun*, %struct.ctl_lun** %3, align 8
  %23 = getelementptr inbounds %struct.ctl_lun, %struct.ctl_lun* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* %4, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %34

27:                                               ; preds = %21
  %28 = load i32, i32* @CTL_LUN_RESERVED, align 4
  %29 = xor i32 %28, -1
  %30 = load %struct.ctl_lun*, %struct.ctl_lun** %3, align 8
  %31 = getelementptr inbounds %struct.ctl_lun, %struct.ctl_lun* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = and i32 %32, %29
  store i32 %33, i32* %31, align 8
  br label %34

34:                                               ; preds = %27, %21, %1
  %35 = load %struct.ctl_lun*, %struct.ctl_lun** %3, align 8
  %36 = getelementptr inbounds %struct.ctl_lun, %struct.ctl_lun* %35, i32 0, i32 2
  %37 = call i32 @mtx_unlock(i32* %36)
  %38 = load %struct.ctl_scsiio*, %struct.ctl_scsiio** %2, align 8
  %39 = call i32 @ctl_set_success(%struct.ctl_scsiio* %38)
  %40 = load %struct.ctl_scsiio*, %struct.ctl_scsiio** %2, align 8
  %41 = bitcast %struct.ctl_scsiio* %40 to %union.ctl_io*
  %42 = call i32 @ctl_done(%union.ctl_io* %41)
  %43 = load i32, i32* @CTL_RETVAL_COMPLETE, align 4
  ret i32 %43
}

declare dso_local %struct.ctl_lun* @CTL_LUN(%struct.ctl_scsiio*) #1

declare dso_local i32 @CTL_DEBUG_PRINT(i8*) #1

declare dso_local i64 @ctl_get_initindex(i32*) #1

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @mtx_unlock(i32*) #1

declare dso_local i32 @ctl_set_success(%struct.ctl_scsiio*) #1

declare dso_local i32 @ctl_done(%union.ctl_io*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
